--- a/angular.json
+++ b/angular.json
@@ -28,12 +28,13 @@
               "src/assets"
             ],
             "styles": [
-               "src/styles.scss",
+               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.scss",
               "src/assets/css/demo.css",
               "src/assets/css/main.css",
               "src/assets/css/global.css",
-              "src/assets/css/pe-icon-7-stroke.css",
 
+              "src/assets/css/pe-icon-7-stroke.css",
               "src/assets/css/light-bootstrap-dashboard.css",
               "src/assets/css/fonts/font-awesome-4.7.0/css/font-awesome.min.css",
               "src/assets/css/bootstrap.min.css"
@@ -109,6 +110,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
