--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.2.0-beta1",
     "font-awesome": "^4.7.0",
+    "install": "^0.13.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.3",
     "ngx-pagination": "^5.1.1",
